# fast-rlm

./: .gitignore  README.md  deno.json  fast_rlm.py  pyproject.toml  rlm_config.yaml  test_counting_r.py
docs/: index.md
docs/development/: from-source.md
docs/getting-started/: installation.md
fast_rlm/: _runner.py
src/: call_llm.ts  logging.ts  prompt.ts  subagents.ts  ui.ts  usage.ts  view_logs.ts
tui_log_viewer/src/: index.tsx
