[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["fast_rlm"]

[project]
name = "rlm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets==3.6.0",
    "dspy>=3.1.3",
    "markdownify>=1.2.2",
    "rich>=14.3.2",
    "wikipedia>=1.4.0",
]
