[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fast-rlm"
version = "0.1.0"
description = "Recursive Language Model — fast agentic LLM orchestration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["fast_rlm"]

[tool.hatch.build.targets.wheel.force-include]
"src" = "fast_rlm/_engine/src"
"deno.json" = "fast_rlm/_engine/deno.json"
"deno.lock" = "fast_rlm/_engine/deno.lock"
"rlm_config.yaml" = "fast_rlm/_engine/rlm_config.yaml"
